	2) mis en if nmat.eq.0 de l'ouverture des fichiers matlab, evite
	des ouvertures de fichiers vides dans cdmlib.f et tous les
	fichiers qui crées les objets
	3) Ecrit ds ifdda.m quel type de fichier on utilise.	
	4) option print mis dans le ifdda.m
	5) correction dans object pour ne pas ecrire quand nmat pas égale à 0.
	6) meme correction que 5 sur xwf, ywf et zwf.

	
	Dans ifdda.m changement des titres pour etre en relatif, champ
	local macroscopique et microscopie.

	----------------------------------------------------------	
	version 0.6.10

	1) Erreur dans objet arbitrary sur la mise en memoire des x,y,z.
	2) Changement dans l'écriture des data.

	
	----------------------------------------------------------
	version 0.6.9

	1) pb objet arbitrary nxmp=nymp=nzmp=0 pas d'affichage: En fait pb
	quand nmat=2 et ecriture local et macro.Dans ce cas, la mise en
	mémoire n'était pas fait et pas de plot possble. Rectifier
	ecriture fait comme avec la surface dans cdmlib.f
	2) Dans objet arbitrary passe na a 0 si -1 choisi car forcement 0
	pour nproche dans objetarbitrary.f
	3) changement nom version en 0.6.9.
	4) remet la memoire ecrit pour savoir ce qu'on utilise et supprime
	les logs qui servaient pas.
	5)  if (minz == maxz) {
      minz=minz*0.5;
      maxz=maxz*1.5;
	}
	pour rangez pour définir en même temps la colorbar. et evite le
	cas aussi ou les deux vallent zero.



	interpolation vraiment moche?


	----------------------------------------------------------
	version 0.6.8

	1) Passe la gestion de nxmp=nymp=nzmp=0 dans le C++ et plus dans
	le fortran. Du coup elimine aussi un bug avec object arbitrary sur
	le tracé.
	2) passe dans le fortran tabfft2 en tableau dans toute les
	routines, de par ce fait tableau défini dans le code main.
	3) Dans la liste des arguments pour la fft passe à un maxi de
	16384 dans le menu déroulant.
	4) introduction de tabfft2 dans le C++
	5) correction oublie de tabfft2 dans microssansinc.f