@@ -20,7 +20,7 @@ set(300,'DefaultTextfontName','Times')
 set(300,'DefaultTextfontSize',12)
 set(300,'DefaultTextfontWeight','Bold')
 set(300,'Position',[0 0 1000 600])
-scale=1
+  scale=1;
 
 quiver(xx(:,:,k),yy(:,:,k),matxytorquex(:,:,k),matxytorquey(:,:,k),scale)
   
